update icon color

--- a/_variable.scss
+++ b/_variable.scss
@@ -65,6 +65,12 @@ $color-border-gray: $color-neutral-100;
 $color-border-primary: $color-primary;
 $color-border-secondary: $color-primary-200;
 
+// color-icon 
+
+$color-icon-gray: $color-neutral-500;
+$color-icon-primary: $color-primary;
+$color-icon-white: $color-neutral-0;
+$color-icon-disable: $color-neutral-300;
 
 // spacing
 
